welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: expected class or object definition
def haveBaggle():Boolean = {
^